--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,11 @@ body{
 
 
 .description{
-    font-size: 0.3rem;
-    margin-bottom: 1px;
+    font-size: 10px;
+    font-family: monospace;
+    margin: 0 auto;
     justify-content: center;
+    color: #fff
 }
 
 .button a{
@@ -120,8 +122,11 @@ body{
         text-align: center;
     }
     .description{
-        font-size: 10px;
-        justify-content: center;
+         font-size: 10px;
+    font-family: monospace;
+    margin: 0 auto;
+    justify-content: center;
+    color: #fff
     }
     
     .button a{
