--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,10 @@ body{
 
  
 .description{
-    font-size: 1.5rem;
+    font-size: 10px;
     font-family: monospace;
     margin-bottom: 0px;
+    align-items: center;
 }
 
 .button a{
