--- a/css/style.css
+++ b/css/style.css
@@ -93,11 +93,11 @@ body{
 
  
 .description{
-    font-size: 4px;
+    font-size: 6.5px;
     font-family: monospace;
     margin-bottom: 10px;
-    color: azure;
-    text-align: center;
+    color: #111;
+    text-justify: center;
 }
 
 .button a{
