--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body{
     font-size: 10px;
     font-family: monospace;
     margin-bottom: 10px;
-    color: #111;
+    color: rgb(225, 27, 240);
    
 }
 
