--- a/css/st.css
+++ b/css/st.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css?family=Baloo+Thambi+2:weight@700&display=swap');
 
 body{
     color: #111;
@@ -15,6 +15,6 @@ body{
 
 .description{
     font-size: 10px;
-    font-family: monospace;
+    font-family: 'Baloo Thambi 2',cursive;
     margin-bottom: 10px;
     color: rgb(225, 100, 240);
