--- a/css/st.css
+++ b/css/st.css
@@ -15,6 +15,6 @@ body{
 
 .description{
     font-size: 10px;
-    font-family: 'Baloo Thambi 2',cursive;
+    font-family: Baloo Thambi 2;
     margin-bottom: 10px;
     color: rgb(225, 100, 240);
